[package]
name = "sdbtree"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crypter = { git = "https://github.com/lemosyne/crypter.git", features = ["openssl"] }
cryptio = { git = "https://github.com/lemosyne/cryptio.git" }
embedded-io = { git = "https://github.com/euugenechou/embedded-io.git" }
kms = { git = "https://github.com/lemosyne/kms.git" }
rand = "0.8.5"
storage = { version = "0.1.0", path = "storage", features = ["dir"] }
thiserror = "1.0.49"

[dev-dependencies]
anyhow = "1.0.75"
