[package]
name = "sdbtree"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crypter = { path = "../crypter" }
cryptio = { path = "../cryptio" }
embedded-io = { path = "../embedded-io" }
kms = { path = "../kms" }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
storage = { version = "0.1.0", path = "storage", features = ["dir"] }
thiserror = "1.0.49"

[dev-dependencies]
anyhow = "1.0.75"
